content/assets/stylesheets/_display.sass
hr
  margin: 0
header
  img
    float: left
    margin-top: 1em
    margin-right: 2em

.grey
  background-color: #fafafa
  border-bottom: #eaeaea solid 1px
  border-top: #eaeaea solid 1px

footer
  padding-top: 1em
  p
    float: left
  .inline-list li
    margin-left: .5rem

.contact-large
  margin-left: 1em

.contact-small
  display: block
  margin: 0 auto 2em

.pull-right-for-medium-up
  float: right
  margin-bottom: 1em

@media only screen and (max-width: 320px)
  header
    h1
      font-size: 170%
      text-align: center
    h2
      font-size: 130%
      text-align: center
    img
      float: none
      display: block
      margin: 0 auto

  footer
    p
      float: none
      text-align: center
  .pull-right-for-medium-up
    float: none
    margin-bottom: 1.2em
    text-align: center
    ul
      display: inline

